--- a/samples/hybrid-connections/dotnet/2.thrift/Client/packages.config
+++ b/samples/hybrid-connections/dotnet/2.thrift/Client/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ApacheThrift" version="0.9.2" targetFramework="net452" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net452" />
-  <package id="WindowsAzure.ServiceBus" version="3.0.9" targetFramework="net452" />
+  <package id="Microsoft.Azure.Relay" version="0.1.2-preview" targetFramework="net452" />
 </packages>
